# cad-datamodel

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  test-ci-local.sh  tox.ini
.bmad-core/: install-manifest.yaml
.github/workflows/: README.md  ci.yml  release.yml
cad_datamodel/: document.py
cad_datamodel/core/: __init__.py  exceptions.py  types.py
cad_datamodel/persistence/: svg.py
cad_datamodel/shapes/: __init__.py  circle.py  factory.py  rectangle.py  shape.py
cad_datamodel/styles/: __init__.py
cad_datamodel/transform/: __init__.py
docs/: architecture.md  changelog.rst  conf.py  development.rst  epics.md  getting_started.rst  index.rst  prd.md  user_guide.rst
docs/api/: core.rst  geometry.rst  index.rst  layers.rst  persistence.rst  shapes.rst  styles.rst  transform.rst
docs/stories/: 1.1.project-structure-setup.story.md  1.2.core-module-implementation.story.md  1.3.ci-pipeline-setup.story.md  1.4.initial-documentation.story.md  2.1.rectangle-shape-implementation.story.md  2.2.circle-shape-implementation.story.md  epic-1-project-setup.md
examples/: house_drawing.py
src/cad_datamodel/: __init__.py  document.py
src/cad_datamodel/core/: base.py  constants.py  exceptions.py  types.py
src/cad_datamodel/geometry/: __init__.py
src/cad_datamodel/layers/: __init__.py
src/cad_datamodel/persistence/: __init__.py  svg.py
src/cad_datamodel/shapes/: __init__.py  factory.py  rectangle.py  shape.py
tests/: __init__.py
tests/integration/: __init__.py
tests/performance/: __init__.py
tests/unit/: __init__.py  test_core.py
tests/unit/persistence/: test_svg_circle.py
tests/unit/shapes/: __init__.py  test_circle.py  test_rectangle.py
