[metadata]
name = cad-datamodel
version = attr: cad_datamodel.__version__
author = CAD Datamodel Contributors
description = A comprehensive data model for CAD drawing applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cad-datamodel/cad-datamodel
project_urls =
    Bug Tracker = https://github.com/cad-datamodel/cad-datamodel/issues
    Documentation = https://cad-datamodel.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Typing :: Typed

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
install_requires =
    numpy==1.26.0
    shapely==2.0.5
    lxml==5.3.0
    pydantic==2.8.0

[options.packages.find]
where = .

[options.extras_require]
dev = 
    pytest==8.3.0
    pytest-cov==5.0.0
    pytest-benchmark==4.0.0
    mypy==1.11.0
    ruff==0.5.0
    sphinx==7.4.0
    sphinx-rtd-theme==2.0.0
    pre-commit==3.7.1
    tox==4.15.1